# auto-demo

./: .gitignore  Pipfile  README.md  build_test.py  generate_data.ps1  grade.py  make.ps1  pyproject.toml  test.in
auto_demo/: grader.py  test_builder.py
src/: Grader.py  TestBuilder.py  TestLoader.py  env_var.py  grader.py  test_builder.py
